--- a/lp2/index.html
+++ b/lp2/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, sans-serif;
-      background: linear-gradient(to bottom, #f9f9ff, #e4dfff);
+      background: linear-gradient(to bottom, #ffe9f6, #ffd0eb);
       margin: 0;
       padding: 0;
       text-align: center;
@@ -23,7 +23,7 @@
       padding: 30px 20px;
       background: #fff;
       border-radius: 14px;
-      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.08);
+      box-shadow: 0 8px 24px rgba(214, 51, 132, 0.15);
       display: flex;
       flex-direction: column;
       flex-grow: 1;
@@ -35,13 +35,13 @@
     }
 
     .highlight {
-      color: #7b2cbf;
+      color: #d63384;
       font-weight: 700;
     }
 
     .subheadline {
       font-size: 16px;
-      color: #555;
+      color: #6b3052;
       margin: 10px 0 20px;
     }
 
@@ -50,7 +50,7 @@
       max-width: 240px;
       border-radius: 12px;
       margin-bottom: 20px;
-      box-shadow: 0 6px 14px rgba(123, 44, 191, 0.2);
+      box-shadow: 0 6px 14px rgba(214, 51, 132, 0.25);
     }
 
     .progress {
@@ -64,9 +64,9 @@
       width: 30px;
       height: 30px;
       border-radius: 50%;
-      background-color: #e0cfff;
-      border: 2px solid #7b2cbf;
-      color: #7b2cbf;
+      background-color: #ffd6ea;
+      border: 2px solid #d63384;
+      color: #d63384;
       font-weight: bold;
       display: flex;
       align-items: center;
@@ -75,7 +75,7 @@
     }
 
     .step.active {
-      background-color: #7b2cbf;
+      background-color: #d63384;
       color: #fff;
     }
 
@@ -87,7 +87,7 @@
     .btn {
       display: block;
       width: 100%;
-      background-color: #6a1b9a;
+      background-color: #d63384;
       color: white;
       border: none;
       padding: 14px;
@@ -95,11 +95,12 @@
       border-radius: 6px;
       margin-bottom: 15px;
       cursor: pointer;
-      transition: background 0.3s ease;
+      transition: background 0.3s ease, transform 0.2s ease;
     }
 
     .btn:hover {
-      background-color: #4a148c;
+      background-color: #ad2768;
+      transform: translateY(-1px);
     }
 
     .hidden {
@@ -107,8 +108,8 @@
     }
 
     .loader {
-      border: 6px solid #e0cfff;
-      border-top: 6px solid #7b2cbf;
+      border: 6px solid #ffd6ea;
+      border-top: 6px solid #d63384;
       border-radius: 50%;
       width: 50px;
       height: 50px;
@@ -129,7 +130,7 @@
     }
 
     footer a {
-      color: #999;
+      color: #d63384;
       text-decoration: underline;
       margin: 0 5px;
     }
@@ -158,12 +159,12 @@
     }
 
     .modal h3 {
-      color: #7b2cbf;
+      color: #d63384;
       margin-bottom: 10px;
     }
 
     .modal p {
-      color: #555;
+      color: #6b3052;
       margin-bottom: 20px;
       font-size: 15px;
     }
