--- a/gutquizlp1/index.html
+++ b/gutquizlp1/index.html
@@ -27,6 +27,7 @@
       color: var(--text-dark);
       line-height: 1.6;
       -webkit-font-smoothing: antialiased;
+      overflow-x: hidden;
     }
 
     a {
@@ -40,6 +41,11 @@
       flex-direction: column;
       align-items: center;
       padding: 32px 16px 80px;
+      width: 100%;
+    }
+
+    .page > * {
+      width: 100%;
     }
 
     header {
@@ -58,7 +64,7 @@
     }
 
     header .logo svg {
-      width: clamp(72px, 16vw, 96px);
+      width: clamp(64px, 14vw, 88px);
       height: auto;
       flex-shrink: 0;
     }
@@ -66,7 +72,7 @@
     header .logo-text {
       display: flex;
       flex-direction: column;
-      font-size: clamp(18px, 4vw, 26px);
+      font-size: clamp(16px, 3.6vw, 24px);
       font-weight: 800;
       letter-spacing: 0.14em;
       text-transform: uppercase;
@@ -88,7 +94,7 @@
 
 
     .quiz-card {
-      width: 100%;
+      width: min(100%, 760px);
       max-width: 760px;
       background: var(--panel);
       border-radius: 24px;
@@ -96,6 +102,9 @@
       padding: 40px clamp(24px, 6vw, 56px);
       position: relative;
       overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      gap: 32px;
     }
 
     .glow {
@@ -130,10 +139,13 @@
       animation: fadeUp 420ms ease both;
       position: relative;
       z-index: 1;
+      flex-direction: column;
+      gap: 18px;
+      scroll-margin-top: 24px;
     }
 
     .quiz-step.active {
-      display: block;
+      display: flex;
     }
 
     .eyebrow {
@@ -426,6 +438,13 @@
     @media (max-width: 640px) {
       .page {
         padding: 24px 14px 60px;
+        align-items: stretch;
+      }
+
+      header,
+      .quiz-card,
+      footer {
+        margin: 0 auto;
       }
 
       .quiz-card {
@@ -483,6 +502,35 @@
       .subheadline,
       .body-copy {
         font-size: clamp(16px, 4vw, 19px);
+      }
+    }
+
+    @media (max-width: 480px) {
+      header .logo svg {
+        width: clamp(56px, 18vw, 72px);
+      }
+
+      header .logo-text {
+        font-size: clamp(15px, 4.4vw, 20px);
+        letter-spacing: 0.12em;
+      }
+
+      .quiz-card {
+        padding: 24px 16px 28px;
+        gap: 28px;
+      }
+
+      .question-title {
+        font-size: clamp(22px, 6.5vw, 28px);
+      }
+
+      .answers {
+        gap: 10px;
+      }
+
+      .answer {
+        padding: 14px 16px;
+        font-size: 15px;
       }
     }
   </style>
@@ -649,6 +697,7 @@
 
   <script>
     const steps = Array.from(document.querySelectorAll('.quiz-step'));
+    const quizCard = document.querySelector('.quiz-card');
     const progressFill = document.getElementById('progressFill');
     const totalQuestions = 5;
     const autoAdvanceDelay = 320;
@@ -666,7 +715,18 @@
       currentStep = boundedIndex;
       steps[currentStep].classList.add('active');
       updateProgress();
-      steps[currentStep].scrollIntoView({ behavior: 'smooth', block: 'start' });
+
+      const activeStep = steps[currentStep];
+      const prefersReducedMotion = window.matchMedia('(prefers-reduced-motion: reduce)').matches;
+      const smoothBehavior = prefersReducedMotion ? 'auto' : 'smooth';
+
+      if (window.matchMedia('(max-width: 640px)').matches && quizCard) {
+        const cardRect = quizCard.getBoundingClientRect();
+        const offset = window.pageYOffset + cardRect.top - 20;
+        window.scrollTo({ top: offset, behavior: smoothBehavior });
+      } else {
+        activeStep.scrollIntoView({ behavior: smoothBehavior, block: 'start', inline: 'nearest' });
+      }
     }
 
     document.querySelectorAll('[data-next]').forEach(button => {
