--- a/lpz6/index.html
+++ b/lpz6/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Health News Daily</title>
+  <script src="https://track.nutr.site/unilpclick.js?attribution=lastpaid&amp;cookiedomain=&amp;cookieduration=90&amp;defaultcampaignid=&amp;regviewonce=false"></script>
   <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg%20xmlns%3D%27http%3A//www.w3.org/2000/svg%27%20viewBox%3D%270%200%20100%20100%27%3E%3Crect%20fill%3D%27%25230a6ebd%27%20width%3D%27100%27%20height%3D%27100%27/%3E%3Ctext%20x%3D%2750%27%20y%3D%2765%27%20font-size%3D%2760%27%20text-anchor%3D%27middle%27%20fill%3D%27white%27%20font-family%3D%27Arial%2C%20sans-serif%27%3EHN%3C/text%3E%3C/svg%3E" />
 
   
@@ -346,10 +347,9 @@
 </footer>
 
     </div>
-    <script src="https://track.nutr.site/unilpclick.js?attribution=lastpaid&cookiedomain=&cookieduration=90&defaultcampaignid=&regviewonce=false"></script>
 </body>
 </html>
 <!-- partial -->
-  
+
 </body>
 </html>
